# apple-git

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  REMINDERS_SETUP.md  cleanup_branches.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  task.md
.github/workflows/: auto-create-branch.yml  ci.yml
config/: config.yaml  config.yaml.example
docs/: REMINDERS_SETUP.md
scripts/: local.apple-git.plist
src/apple_git/: __init__.py  __main__.py  apple_tools.py  config.py  connector.py  github.py  issue_analyzer.py  notes.py  planner.py  reminders.py  reviewer.py  security_reviewer.py  setup.py  store.py  tree.py
src/apple_git.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: _debug_fetch_reminders.py  _debug_process.py  _debug_reminders_groups.py  test_app.py  test_config.py  test_fetch_reminders.py  test_planner.py  test_process.py  test_reminders.py  test_reminders_groups.py  test_review_prompts.py  test_store.py  test_tree.py
